@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-23T08:25:19Z",
-  "count_outdated" : 139,
-  "uniques_outdated" : 95,
+  "timestamp" : "2022-09-25T08:23:09Z",
+  "count_outdated" : 140,
+  "uniques_outdated" : 96,
   "count" : 147,
   "uniques" : 103,
   "clones" : [
-    {
-      "timestamp": "2022-09-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-13T00:00:00Z",
       "count": 1,
