@@ -1,12 +1,7 @@
 {
-  "count": 8,
+  "count": 7,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2022-09-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-13T00:00:00Z",
       "count": 1,
