@@ -1,3 +1,11 @@
+2022-09-25T08:23:09Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3121460117
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 95 139 / 103 147
+* notice: next accum: outdated-unq outdated-all / unq all: 96 140 / 103 147
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-11] / []
+
 2022-09-23T08:25:19Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3111357491
 * notice: last 14d: unq all: 1 8
